4th commit responsive md and xl and a bit of sm

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <section id="top" class="bg-gradient-to-b from-black to-blue-900">
     <!-- HEADER SECTION  -->
     <header class="w-3/4 m-auto flex items-center justify-center h-2/2">
-      <div class="flex md:flex-col xl:flex-row xl:justify-between">
+      <div class="flex flex-col md:flex-col xl:flex-row xl:justify-between">
         <figure class="flex items-center justify-center">
           <img src="img/Hero.png" alt=""
-            class="pt-6 md:max-h-[600px] xl:max-h-[1600px] w-auto xl:ml-[-40px] md:ml-1 md:mr-12" />
+            class="pt-6 max-h-[300px] md:max-h-[400px] xl:max-h-[1600px] w-auto xl:ml-[-40px] md:ml-1 mr-11" />
         </figure>
-        <div id="header-text" class="py-9">
-          <h1 class="xl:my-5 xl:mr-4 xl:pr-20 md:px-20 font-black xl:text-5xl md:text-4xl text-white xl:text-left">
+        <div id="header-text" class="py-8">
+          <h1 class="xl:my-5 xl:mr-4 xl:pr-20 md:px-20 text-3xl sm:text-4xl font-black xl:text-5xl md:text-4xl text-white xl:text-left">
             Bump is the easy way to
             <span id="highlight"
               class="text-transparent bg-clip-text bg-gradient-to-r from-orange-500 to-red-500">release</span>
@@ -30,7 +30,7 @@
             indie Mac apps.
           </h1>
           <p
-            class="xl:py-5 xl:pr-5 md:px-10 md:py-5 md:mx-10 font-semibold xl:text-1.6xl md:text-2xl text-white xl:text-left">
+            class="xl:py-5 xl:pr-5 md:px-10 md:py-5 py-5 md:mx-10 sm:py-5 font-semibold xl:text-1.6xl md:text-2xl text-white xl:text-left">
             An automated pipeline designed to make distributing <br />
             apps with
             <span class="text-blue-500 hover:text-blue-400">Sparkle</span>
@@ -38,14 +38,14 @@
           </p>
 
           <div id="cta"
-            class="md:text-center md:my-5 md:mx-auto xl:text-left xl:my-5 xl:mr-2 flex items-center xl:justify-left md:justify-center py-3 flex-col sm:flex-row">
+            class="sm:text-center md:text-center my-5 mx-auto xl:text-left xl:my-5 xl:mr-2 flex items-center xl:justify-left justify-center py-3 flex-col sm:flex-row">
             <a
-              class="md:px-4 md:py-3.5 xl:text-1xl font-semibold text-white xl:py-3.5 xl:px-3 rounded-lg flex items-center space-x-2 transition-all hover:translate-y-[-2px] bg-gradient-to-b from-blue-500 to-blue-700">
+              class="px-4 sm:py-3.5 py-2 mb-10 xl:text-1xl font-semibold text-white xl:py-3.5 xl:px-3 rounded-lg flex items-center space-x-2 transition-all hover:translate-y-[-2px] bg-gradient-to-b from-blue-500 to-blue-700">
               <img src="img/github.svg" alt="" class="max-h-[32px] w-auto px-2 opacity-50" />
 
               View the repo</a>
             <div id="create-repo">
-              <a class="text-1xl font-semibold text-blue-400 py-4 px-2.5 mx-5 border rounded-lg border-blue-400"
+              <a class="text-1xl font-semibold text-blue-300 py-3 mb-10 px-2 mx-auto border rounded-lg border-blue-400"
                 href="">
                 Create your repo now
               </a>
@@ -58,24 +58,27 @@
     <!-- main section -->
     <main class="w-3/4 m-auto flex flex-col items-center justify-center h-2/2">
       <div id="card-container"
-        class="grid xl:gap-4 xl:grid-cols-2 xl:grid-rows-2 md:gap-4 md: grid-cols-1 md:grid-rows-4">
+        class="grid xl:gap-5 xl:grid-cols-2 xl:grid-rows-2 gap-4 grid-cols-1 grid-rows-4">
         <!-- seamless workflow card  -->
         <div
           class="card 
-          md:flex md:flex-row md:items-center md:justify-center 
-          xl:flex xl:flex-col 
-           xl:justify-center 
-           xl:items-center
+          flex md:flex-row md:items-center md:justify-center
+          xl:flex xl:flex-col
+          xl:justify-center
+          xl:items-center
           bg-blue-900/30 rounded-lg">
 
-          <div class="card-header md: xl:py-1.5">
-            <img src="img/seamless.png" alt="" id="icon" class="xl:pt-2 md:max-h-[150px] pb-5 xl:max-h-[100px] xl:w-auto mt-5" />
+          <div class="card-header relative bottom-5 md: xl:py-1.5">
+            <img src="img/seamless.png" alt="" id="icon" 
+            class="  xl:pt-2 md:max-h-[150px] max-h-[80px] 
+            pb-5 xl:max-h-[100px] 
+            xl:w-auto mt-5"/>
           </div>
-          <div class="card-body xl:py-1 px-10">
-            <h2 class="card-title text-white py-2 font-semibold md:text-left">
+          <div class="card-body xl:py-1 py-0 px-5 ">
+            <h2 class="card-title text-white py-2 font-semibold xl:text-center text-left">
               Seamless workflow
             </h2>
-            <p class="description text-white opacity-50 py-2 xl:text-center md:text-left text-sm">
+            <p class="description text-white opacity-50 py-2 xl:text-center text-left text-sm">
               Create a changelog, upload your new App archive and push it live
               without leaving the GitHub UI. It's perfect for teams building
               and releasing together.
@@ -89,11 +92,13 @@
          xl:justify-center 
          xl:items-center
         bg-blue-900/30 rounded-lg">
-          <div class="card-header py-1.5">
-            <img src="img/automatic.png" alt="" id="icon" class="xl:pt-2 md:max-h-[150px] pb-5 xl:max-h-[100px] xl:w-auto mt-5" />
+          <div class="card-header py-1.5 relative bottom-5">
+            <img src="img/automatic.png" alt="" id="icon" class=" xl:pt-2 md:max-h-[150px] max-h-[80px] 
+            pb-5 xl:max-h-[100px] 
+            xl:w-auto mt-5" />
           </div>
           <div class="card-body py-1 px-10">
-            <h2 class="card-title text-white py-2 font-semibold md:text-left">
+            <h2 class="card-title text-white py-2 font-semibold xl:text-center text-left">
               Automatic certificate management
             </h2>
             <p class="description text-white opacity-50 py-2 xl:text-center text-sm md:text-left">
@@ -110,8 +115,10 @@
          xl:justify-center 
          xl:items-center
         bg-blue-900/30 rounded-lg">
-          <div class="card-header py-1.5">
-            <img src="img/sparkle.png" alt="" id="icon" class="xl:pt-2 md:max-h-[150px] pb-5 xl:max-h-[100px] xl:w-auto mt-5" />
+          <div class="card-header py-1.5 relative bottom-5">
+            <img src="img/sparkle.png" alt="" id="icon" class=" xl:pt-2 md:max-h-[150px] max-h-[80px] 
+            pb-5 xl:max-h-[100px] 
+            xl:w-auto mt-5" />
           </div>
           <div class="card-body py-1 px-10">
             <h2 class="card-title text-white py-2 font-semibold md:text-left">
@@ -131,8 +138,10 @@
          xl:justify-center 
          xl:items-center
         bg-blue-900/30 rounded-lg">
-          <div class="card-header py-1.5">
-            <img src="img/devops.png" alt="" id="icon" class="xl:pt-2 md:max-h-[130px] pb-5 xl:max-h-[100px] xl:w-auto mt-5" />
+          <div class="card-header py-1.5 relative bottom-5">
+            <img src="img/devops.png" alt="" id="icon" class=" xl:pt-2 md:max-h-[150px] max-h-[80px] 
+            pb-5 xl:max-h-[100px] 
+            xl:w-auto mt-5" />
           </div>
           <div class="card-body py-1 px-10">
             <h2 class="card-title text-white py-2 font-semibold md:text-left">
